Adding some changes to reader class - now it works